added logger, refactored specs, updated readme, version 0.4

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+0.4.0 -- pluralisation_rules is no longer stored in each repository, only retrived. Added Chain and Logger repository.
 0.3.6 -- FastGettext.default_locale=
 0.3.5 -- FastGettext.default_text_domain=
 0.3.4 -- Exceptions are thrown, not returned when translating without text domain
