--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+0.4.14 -- "" is translated as "", not as gettext meta information
 0.4.0 -- pluralisation_rules is no longer stored in each repository, only retrived. Added Chain and Logger repository.
 0.3.6 -- FastGettext.default_locale=
 0.3.5 -- FastGettext.default_text_domain=
