[po] add a missing unescape.

--- a/spec/locale/de/test.po
+++ b/spec/locale/de/test.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: version 0.0.1\n"
 "POT-Creation-Date: 2009-02-26 19:50+0100\n"
-"PO-Revision-Date: 2009-02-18 14:53+0100\n"
+"PO-Revision-Date: 2011-12-04 18:54+0900\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -59,3 +59,7 @@ msgid "this is a dynamic translation which was found thorugh gettext_test_log!"
 msgstr ""
 "Dies ist eine dynamische Übersetzung, die durch gettext_test_log "
 "gefunden wurde!"
+
+#: locale/test_escape.rb:2
+msgid "You should escape '\\' as '\\\\'."
+msgstr "Sie sollten escape '\\' als '\\\\'."
