--- a/spec/locale/de/test.po
+++ b/spec/locale/de/test.po
@@ -72,3 +72,7 @@ msgstr "Du solltest '\\' als '\\\\' escapen."
 
 msgid "Umläüte"
 msgstr "Umlaute"
+
+msgctxt "Fruit"
+msgid "Apple"
+msgstr "Apfel"
