--- a/spec/locale/de/test.po
+++ b/spec/locale/de/test.po
@@ -76,3 +76,9 @@ msgstr "Umlaute"
 msgctxt "Fruit"
 msgid "Apple"
 msgstr "Apfel"
+
+msgctxt "Fruit"
+msgid "Banana"
+msgid_plural "Bananas"
+msgstr[0] "Banane"
+msgstr[1] "Bananen"
