--- a/spec/locale/de/test2.po
+++ b/spec/locale/de/test2.po
@@ -66,3 +66,9 @@ msgstr "nur in test2 Domain"
 msgctxt "Fruit"
 msgid "Apple"
 msgstr "Apfel 2"
+
+msgctxt "Fruit"
+msgid "Banana"
+msgid_plural "Bananas"
+msgstr[0] "Banane 2"
+msgstr[1] "Bananen 2"
