--- a/spec/locale/de/test.po
+++ b/spec/locale/de/test.po
@@ -1,4 +1,5 @@
 # SOME DESCRIPTIVE TITLE.
+# msgfmt -c spec/locale/de/test.po -o spec/locale/de/LC_MESSAGES/test.mo
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -14,7 +15,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=n==1?0:1;\n"
 
 #: app/helpers/translation_helper.rb:3
 msgid "%{relative_time} ago"
@@ -82,3 +83,8 @@ msgid "Banana"
 msgid_plural "Bananas"
 msgstr[0] "Banane"
 msgstr[1] "Bananen"
+
+msgid "Cat|Foot"
+msgid_plural "Feet"
+msgstr[0] "Tatze"
+msgstr[1] "Tatzen"
